// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip (single) should not show filter button 1`] = `
<table
  className="mapFeatureTooltip_table"
>
  <tbody>
    <tr
      key="foo"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        foo
      </td>
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyValue"
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar",
          }
        }
      />
    </tr>
    <tr
      key="foo"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        foo
      </td>
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyValue"
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar",
          }
        }
      />
    </tr>
  </tbody>
</table>
`;

exports[`FeatureTooltip (single) should show error message if unable to load tooltip content 1`] = `
<EuiCallOut
  color="danger"
  iconType="alert"
  size="s"
  title="Unable to load tooltip content"
>
  <p>
    Simulated load properties error
  </p>
</EuiCallOut>
`;

exports[`FeatureTooltip (single) should show only filter button for filterable properties 1`] = `
<table
  className="mapFeatureTooltip_table"
>
  <tbody>
    <tr
      key="foo"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        foo
      </td>
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyValue"
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar",
          }
        }
      />
      <td>
        <EuiButtonIcon
          aria-label="Filter on property"
          className="mapFeatureTooltip__filterButton"
          color="primary"
          data-test-subj="mapTooltipCreateFilterButton"
          iconSize="m"
          iconType="plusInCircle"
          onClick={[Function]}
          title="Filter on property"
          type="button"
        />
      </td>
    </tr>
    <tr
      key="foo"
    >
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyLabel"
      >
        foo
      </td>
      <td
        className="eui-textOverflowWrap mapFeatureTooltip__propertyValue"
        dangerouslySetInnerHTML={
          Object {
            "__html": "bar",
          }
        }
      />
    </tr>
  </tbody>
</table>
`;
